add_library(efloop
    ./include/efloop/external_feedback_loop.hpp
    ./src/external_feedback_loop.cpp

    ./include/efloop/access_to_sensory_cells.hpp
    ./src/access_to_sensory_cells.cpp

    ./include/efloop/access_to_synapses_to_muscles.hpp
    ./src/access_to_synapses_to_muscles.cpp
    )

