install(
    FILES
        __init__.py
        config.py
        distribution.py
        integrator.py
        neuron.py
        plot.py
        soma.py
        synapse.py
        spike_train.py
        spiking.py
        synapse.py
        tests.py
    DESTINATION
        "evaluation/pycellab"
    )
